tests/NormalTests/paczka1/small_fuzzy/62904985.err
Error in line 2: eopP S746 50,31
Error in line 4: Qczaz A570 38,3
Error in line 1: eopP A979 59,3
Error in line 6: Qczaz S822 69,1
